Fix contact icons alignment

--- a/homepage/static/css/style.less
+++ b/homepage/static/css/style.less
@@ -169,13 +169,14 @@ div#about {
 
             a {
                 color: @link-color;
+                vertical-align: middle;
             }
 
             img.icon {
                 width: @favicon-size;
                 height: @favicon-size;
                 padding-right: 5px;
-                vertical-align: bottom;
+                vertical-align: middle;
             }
         }
     }
